# src/views/pages/swagger.json
@@ -1367,7 +1367,7 @@
         "summary": "Search for anime or manga on MyAnimeList",
         "parameters": [
           {
-            "name": "querystring",
+            "name": "name",
             "in": "query",
             "description": "The search query",
             "required": true,
@@ -1391,7 +1391,14 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful response"
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SuccessResponse"
+                }
+              }
+            }
           }
         }
       }
@@ -1452,7 +1459,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1528,10 +1535,12 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful response",
             "content": {
               "application/json": {
-                "schema": {}
+                "schema": {
+                  "$ref": "#/components/schemas/SuccessResponse"
+                }
               }
             }
           }
@@ -1564,25 +1573,68 @@
         ],
         "responses": {
           "200": {
-            "description": "List of anime news articles",
+            "description": "Successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "title": {
-                        "type": "string"
-                      },
-                      "link": {
-                        "type": "string"
-                      },
-                      "date": {
-                        "type": "string"
-                      }
-                    }
-                  }
+                  "$ref": "#/components/schemas/SuccessResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/myanimelist/info-anime": {
+      "get": {
+        "tags": [
+          "MyAnimeList"
+        ],
+        "summary": "Mendapatkan informasi anime berdasarkan nama",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "description": "Nama anime yang ingin dicari",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "getBestMatch",
+            "in": "query",
+            "description": "Apakah ingin menggunakan match-sorter untuk menemukan hasil terbaik",
+            "required": true,
+            "schema": {
+              "type": "boolean",
+              "enum": [
+                true,
+                false
+              ]
+            }
+          },
+          {
+            "name": "type",
+            "in": "query",
+            "description": "Tipe, bisa berupa anime atau manga",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "anime",
+                "manga"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1614,15 +1666,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {
-                    "title": {
-                      "type": "string"
-                    },
-                    "episodes": {
-                      "type": "integer"
-                    }
-                  }
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1658,12 +1702,11 @@
         ],
         "responses": {
           "200": {
-            "description": "Episodes list retrieved successfully",
+            "description": "Successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {}
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1714,12 +1757,11 @@
         ],
         "responses": {
           "200": {
-            "description": "List of anime reviews",
+            "description": "Successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object",
-                  "properties": {}
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1755,11 +1797,11 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1795,11 +1837,11 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1835,11 +1877,11 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -1852,11 +1894,12 @@
         "tags": [
           "MyAnimeList"
         ],
+        "deprecated": true,
         "summary": "Get anime picture",
         "parameters": [
           {
             "in": "query",
-            "name": "name",
+            "name": "username",
             "required": true,
             "description": "The name of the anime",
             "schema": {
@@ -1866,11 +1909,11 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful response",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/SuccessResponse"
                 }
               }
             }
@@ -2121,13 +2164,13 @@
                 "xiaopangju"
               ]
             },
-            "description": "Country name"
+            "description": "List name"
           }
         ],
         "responses": {
           "200": {
             "content": {
-              "image/*": {}
+              "image/jpeg": {}
             }
           }
         }
